Fixed visual querk of truncated-text hover and removed cursor

--- a/src/styles/signUp.css
+++ b/src/styles/signUp.css
@@ -8,7 +8,6 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    cursor: pointer;
 }
 
 .truncated-text:hover {
@@ -16,9 +15,8 @@
     overflow: visible;
     background-color: var(--yellow);
     position: relative;
-    z-index: 1;
-    width: auto;
-    max-width: 100%;
+    z-index: 2;
+    width: 50%;
     padding: 0.5rem;
 }
 
